--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -9,3 +9,4 @@ flutter_icons:
   image_path_ios: "assets/images/ios_launcher_icon.png"
   adaptive_icon_background: "#ffffff"
   adaptive_icon_foreground: "assets/images/android_launcher_icon.png"
+  remove_alpha_ios: true
